@@ -158,6 +158,10 @@ Returns DateTime object for date.
  new():
          From Class::Utils::set_params():
                  Unknown parameter '%s'.
+         From Mo::utils::check_isa():
+                 Parameter 'dt_from' must be a 'DateTime' object.
+                         Value: %s
+                         Reference: %s
 
  random_day():
          From Random::Day::random_day():
