@@ -30,6 +30,7 @@ requires:
   DateTime::Event::Random: 0
   DateTime::Event::Recurrence: 0
   Error::Pure: 0.15
+  Mo::utils: '0.08'
   perl: 5.6.2
 resources:
   bugtracker: https://github.com/michal-josef-spacek/Random-Day/issues
