@@ -23,6 +23,7 @@ requires 'DateTime' => 0;
 requires 'DateTime::Event::Random' => 0;
 requires 'DateTime::Event::Recurrence' => 0;
 requires 'Error::Pure' => 0.15;
+requires 'Mo::utils' => '0.08';
 resources 'bugtracker' => 'https://github.com/michal-josef-spacek/Random-Day/issues';
 resources 'homepage' => 'https://github.com/michal-josef-spacek/Random-Day';
 resources 'repository' => 'git://github.com/michal-josef-spacek/Random-Day';
