@@ -4,7 +4,7 @@ use warnings;
 use English qw(-no_match_vars);
 use Error::Pure::Utils qw(clean);
 use Random::Day::InThePast;
-use Test::More 'tests' => 4;
+use Test::More 'tests' => 5;
 use Test::NoWarnings;
 
 # Test.
@@ -26,4 +26,14 @@ eval {
 };
 is($EVAL_ERROR, "Unknown parameter 'something'.\n",
 	'Bad \'something\' parameter.');
+clean();
+
+# Test.
+eval {
+	Random::Day::InThePast->new(
+		'dt_from' => 'bad',
+	);
+};
+is($EVAL_ERROR, "Parameter 'dt_from' must be a 'DateTime' object.\n",
+	"Parameter 'dt_from' must be a 'DateTime' object (bad).");
 clean();
